--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-2.03MB/s(Youtube:不良林), server: 213.183.59.185, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇳🇱 荷兰-1.67MB/s(Youtube:不良林), server: 213.183.51.172, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 (已存活1天)中国-9.67MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.65MB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-20.63MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
+  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
+  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: 185.167.116.24, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
+  - {name: 🇳🇱 荷兰-2.34MB/s(Youtube:不良林), server: 213.183.51.172, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林), server: 213.183.53.207, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-21.30MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
   - {name: 🇺🇸 美国-17.47MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
   - {name: 🇺🇸 美国-12.48MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
-  - {name: 🇺🇸 美国-7.88MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
+  - {name: 🇺🇸 美国-13.87MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
   - {name: 🇺🇸 美国-12.72MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
