--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
-  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: 185.167.116.24, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
-  - {name: 🇳🇱 荷兰-2.34MB/s(Youtube:不良林), server: 213.183.51.172, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林), server: 213.183.53.207, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇺🇸 美国-21.30MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
+  - {name: 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林), server: 185.167.116.24, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-3.02MB/s(Youtube:不良林), server: 213.183.53.207, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇳🇱 荷兰-3.00MB/s(Youtube:不良林), server: 213.183.59.218, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇳🇱 荷兰-2.15MB/s(Youtube:不良林), server: 213.183.51.172, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 213.183.51.172, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇺🇸 美国-4.51MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
   - {name: 🇺🇸 美国-17.47MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
   - {name: 🇺🇸 美国-12.48MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
-  - {name: 🇺🇸 美国-13.87MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
-  - {name: 🇺🇸 美国-12.72MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
+  - {name: 🇺🇸 美国-13.67MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-907.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
