--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇳🇱 荷兰-1.73MB/s(Youtube:不良林), server: 213.183.59.185, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇷🇺 俄罗斯联邦-801.7KB/s(Youtube:不良林), server: 213.183.53.202, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇳🇱 荷兰-1.52MB/s(Youtube:不良林), server: 213.183.59.185, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.51MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
+  - {name: 🇳🇱 荷兰-2.24MB/s(Youtube:不良林), server: 213.183.59.185, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇷🇺 俄罗斯联邦-687.4KB/s(Youtube:不良林), server: 213.183.53.207, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇺🇸 美国-3.83MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-5.49MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: 38.68.134.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-12.32MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
   - {name: 🇺🇸 美国-17.47MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
-  - {name: 🇺🇸 美国-12.48MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
+  - {name: 🇺🇸 美国-6.51MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
   - {name: 🇺🇸 美国-10.03MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
   - {name: 🇺🇸 美国-13.67MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-801.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-687.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-801.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-687.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-801.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-687.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-801.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-687.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-801.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-687.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-801.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-687.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-801.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-687.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-17.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.67MB/s(Youtube:不良林)
 rules:
